--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wmcc-builder",
-  "version": "1.0.0-beta.1",
+  "version": "1.0.0-beta.2",
   "productName": "wmcc-builder",
   "description": "WorldMobileCoin © WMCC Desktop Builder",
   "homepage": "https://github.com/WorldMobileCoin/wmcc-builder",
@@ -28,8 +28,7 @@
     "wmcc-desktop": "*"
   },
   "devDependencies": {
-    "electron-builder": "^19.49.2",
-    "electron-rebuild": "^1.6.0"
+    "electron-builder": "^19.49.2"
   },
   "license": "MIT",
   "scripts": {
