--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "wmcc-desktop": "*"
   },
   "devDependencies": {
-    "electron-builder": "^19.49.2"
+    "electron-builder": "19.49.2"
   },
   "license": "MIT",
   "scripts": {
